# libdxfrw-master

./: CMakeLists.txt
src/: drw_base.h  drw_classes.h  drw_config.h  drw_entities.h  drw_header.h  drw_interface.h  drw_objects.h  libdwgr.h  libdxfrw.h
src/intern/: drw_textcodec.cpp  drw_textcodec.h
